// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI component snapshots > Badge tones 1`] = `
<div>
  <span
    class="inline-flex items-center text-xs px-2 py-0.5 rounded-full bg-gray-700 text-gray-300 "
  >
    默认
  </span>
  <span
    class="inline-flex items-center text-xs px-2 py-0.5 rounded-full bg-emerald-900/50 text-emerald-400 "
  >
    成功
  </span>
  <span
    class="inline-flex items-center text-xs px-2 py-0.5 rounded-full bg-amber-900/50 text-amber-400 "
  >
    警告
  </span>
</div>
`;

exports[`UI component snapshots > Button danger sm 1`] = `
<button
  class="rounded-lg font-medium transition-colors px-3 py-1.5 text-xs bg-red-700 hover:bg-red-600 text-white disabled:opacity-50 "
>
  删除
</button>
`;

exports[`UI component snapshots > Button primary 1`] = `
<button
  class="rounded-lg font-medium transition-colors px-4 py-2 text-sm bg-emerald-600 hover:bg-emerald-700 text-white disabled:bg-gray-700 disabled:text-gray-500 "
>
  保存
</button>
`;

exports[`UI component snapshots > Card 1`] = `
<div
  class="bg-gray-900 border border-gray-800 rounded-xl p-4 "
>
  <p>
    内容
  </p>
</div>
`;

exports[`UI component snapshots > EmptyState 1`] = `
<div
  class="flex flex-col items-center justify-center py-12 text-center"
>
  <h3
    class="text-lg font-medium text-gray-300"
  >
    暂无数据
  </h3>
  <p
    class="text-sm text-gray-500 mt-2 max-w-sm"
  >
    创建第一个目标开始使用
  </p>
  <div
    class="mt-6"
  >
    <button
      class="rounded-lg font-medium transition-colors px-4 py-2 text-sm bg-emerald-600 hover:bg-emerald-700 text-white disabled:bg-gray-700 disabled:text-gray-500 "
    >
      新建
    </button>
  </div>
</div>
`;
